improve performance fix firefox layout issue

--- a/src/main.scss
+++ b/src/main.scss
@@ -61,6 +61,8 @@ body {
 	padding: 1vh 0 0 0;
 	position: absolute;
 	top: 0;
+	left: 0;
+	right: 0;
 	width: 100vw;
 	flex-direction: column;
 	max-width: 100vw;
